bk_ida/gccida/c3/gen_array_type_die
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_array_type_die/src/dwarf2out.c:10241:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *rttree; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_array_type_die/src/dwarf2out.c:10242:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v26; // r13 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_array_type_die/src/dwarf2out.c:10264:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
if ( !rtl || ( v5 = ( int)rtl[1], ( _BYTE)v5 == 38) || ( _BYTE)v5 == 23 ) 
                          ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_array_type_die/src/dwarf2out.c:10283:44: error: use of undeclared identifier 'debug_info_level_0'
if ( ( v5 & 0x4000) == 0 && ( unsigned int)debug_info_level_0 >= DINFO_LEVEL_NORMAL ) 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_array_type_die/src/dwarf2out.c:10333:4: error: incomplete definition of type 'struct hash_table'
v14->alloc_node = indirect_string_alloc; 
~~~^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_array_type_die/src/ggc.h:33:8: note: forward declaration of 'struct hash_table'
struct hash_table;
       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_array_type_die/src/dwarf2out.c:10396:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v24.rtwint = ( __int64)v20->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_array_type_die/src/dwarf2out.c:10398:20: error: expected expression
v26 = ( tree_node *)v20[7]; 
                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_array_type_die/src/dwarf2out.c:10398:9: error: use of undeclared identifier 'tree_node'
v26 = ( tree_node *)v20[7]; 
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_array_type_die/src/dwarf2out.c:10400:13: error: invalid operands to binary expression ('struct rtx_def' and 'int')
&& ( v20[1] != 6 || *( _QWORD *)&v20[6] 
     ~~~~~~ ^  ~
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_array_type_die/src/obj/dwarf2out.o] Error 1
